# Renderiz

./: README.md  pyproject.toml  setup.py
examples/: MobileExample.py  WebExample.py
renderiz/: __init__.py
renderiz/Animation/: AnimationEngine.py  Easing.py  Keyframe.py  Transition.py  __init__.py
renderiz/Components/: BaseComponent.py  ComponentRegistry.py  Lifecycle.py  Props.py  __init__.py
renderiz/Core/: DiffPatcher.py  Renderer.py  VNode.py  VirtualDOM.py  __init__.py
renderiz/Performance/: LazyLoader.py  Memoizer.py  Scheduler.py  __init__.py
renderiz/Platform/: MobileRenderer.py  WebRenderer.py  __init__.py
renderiz/Utils/: CSSBuilder.py  EventEmitter.py  __init__.py
