[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "renderiz"
version = "0.1.0"
description = "Framework Python para renderização de alta performance em Web e Mobile"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["rendering", "virtual-dom", "web", "mobile", "components", "animation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]
server = ["flask>=3.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["Test*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
verbosity = 2

[tool.setuptools.packages.find]
where = ["."]
include = ["renderiz*"]
